# dspboard

./: .gitignore  .gitmodules  DSPasm.events.txt  DSPasm.samples.txt  DSPasm.txt  DSPboard.Ddb  README  assembly.txt  docs.overview  hardware.txt  readme.txt  software.txt  testbench.txt  ti.mail.txt
DSP Board/: DSP.SCHDOC  DSPA.SCHDOC  DSPB.SCHDOC  DSPboard.PCBDOC  DSPboard.PRJPCB  FPGA.SCHDOC  FPGAIO.SCHDOC  PowerClocks.SCHDOC  fiber.SCHDOC  main.SCHDOC  outputs.OUTJOB  parts.PCBLIB  parts.SCHLIB  pcb.PCBDOC
DSP Board/Outputs/: DSPboard.G1  DSPboard.GBL  DSPboard.GBS  DSPboard.GM6  DSPboard.GP1  DSPboard.GP2  DSPboard.GP3  DSPboard.GTL  DSPboard.GTO  DSPboard.GTS  DSPboard.TXT  Pick Place for pcb.txt  pcb.G2  pcb.GBL  pcb.GBO  pcb.GBP  pcb.GM5  pcb.GP2  pcb.GTP  pcb.LDP  pcb.TXT
DSPasm/: ADSP-21065L_soma.ldf  DSPasm.dpj  DSPboard.dpj  DSPboard.ldf  DSPboard.mak  DSPboard.xml  FIRtoDAT.m  IIRtoDAT.m  events.asm  filters.asm  loader.asm  main.asm  memory.h  samples.asm  singletohex  singletohex.cc
DSPasm/S3/: DSPboard.s_0  DSPboard.s_1  DSPboard.s_2  DSPboard.s_3  DSPboard.s_4  DSPboard.s_5
DSPasm/parser/: DSPBody.py  README  bodyparser.py
boot/: .gitignore  Makefile  boot.jed  boot.prj  boot.ucf  boot.vhd  boot.vm6
debian/: changelog  rules
docs/: ASM overview.ai  DSPIO.ai  DSPboard.docbook  DSPboard.tex  Data Buffer FSMs.ai  Data Buffer.ai  Data Mux.ai  Event FSMs DWE.ai  Event FSMs.ai  Event Inputs.ai  Event Mux.ai  Event Outputs.ai  Events FSMs In.ai  Events FSMs.ai  Events.ai  FPGA.ai  FPGA.docbook  Fiber RX.ai  Fiber TX.ai  Fiber.ai  Makefile  README  Timer.ai  acqboard-dspio.tex  acqboardio.memmap  bootser.txt  datasport.txt  docs.overview  dspboard.bomdb  dspboard.bomdb.ods  dspcontproc.txt  encodemux.txt  eventinput.memmap  eventmap.txt  eventoutput.memmap  eventrx.tex  eventtx.tex  outputdata.memmap  pins.txt  statusanddata.memmap  (+3 more)
docs/DSPasm/: DSPasm.events.txt  DSPasm.memory.txt  DSPasm.samples.txt  DSPasm.txt  Makefile  README  software.tex
docs/FPGA/: DSPIO.ai  Data Buffer FSMs.ai  Data Buffer Input FSM.ai  Data Buffer.ai  Data Mux.ai  Event Mux.ai  Events FSMs Out.ai  FPGA.ai  FPGA.docbook  FPGA.tex  Fiber RX.ai  Fiber TX FSM.ai  evtendianrev.tex
docs/FPGADSPio/: DSPIO.docbook  FPGA.tex  Makefile  Timer.ai  fpgadspio.tex
docs/acqserial/: uartacqrx.txt
docs/devicelinkio/: devicemux.tx.tex
docs/devicemux/: encodemux.txt
docs/eventio/: Makefile  events.tex
docs/generalIO/: events.tex
docs/hw/: jtag.txt
docs/overview/: Makefile  overview.tex  overview.txt
docs/src/: AcqboardDataSource.txt  ContDataSink.txt  DSP.txt  DataOutFIFO.txt  EventRXDispatcher.txt  EventTXAggregator.txt  acqdatasource.txt  acqserial.txt  acqstatecontrol.txt  callbacks.txt  clocking.txt  dataout.cc  dataout.h  datasport.txt  eventreceiver.txt  eventtx.txt  filterlinkcontroller.txt  fir.txt  memcpy_endian.txt  memory.txt  overview.txt  software.arch.tex  tetrodesink.txt
iolib/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README  configure.ac  somadspio-1.0.pc.in
iolib/debian/: changelog  control  copyright
iolib/somadspio/: CMakeLists.txt  const.h  dspcontrol.cc  dspcontrol.h  eventcodec.cc
iolib/src/: CMakeLists.txt  Makefile.am  dspcontrol.cc  dspcontrol.h  eventcodec.cc  eventcodec.h
iolib/tests/: CMakeLists.txt  Makefile.am  README  dspproxytest.cc  main.cc  mockdspboard.cc  mockdspboard.h  test_acqdatasource.cc  test_simple.cc
parser/: ParseDSP.py  ParseDSPTest.py  parse.py
pcb/: DSP.SCHDOC  DSPA.SCHDOC  DSPBOARD.PRJPCB  FPGA.SCHDOC  FPGAIO.SCHDOC  PowerClocks.SCHDOC  fiber.SCHDOC  main.SCHDOC  outputs.OUTJOB  parts.PCBLIB  parts.SCHLIB  pcb.PCBDOC
pcb/Outputs/: DSPboard.GM5  DSPboard.GM6  DSPboard.GP1  DSPboard.GP2  DSPboard.GTO  DSPboard.GTS  DSPboard.TXT  Makefile  Pick Place for pcb.csv  Pick Place for pcb.txt  README  pcb.DRR  pcb.G1  pcb.G2  pcb.GBL  pcb.GBO  pcb.GBP  pcb.GBS  pcb.GM5  pcb.GM6  pcb.GP1  pcb.GP2  pcb.GTL  pcb.GTO  pcb.GTP  pcb.GTS  pcb.LDP  pcb.REP  pcb.RUL  pcb.TXT  pnp-merged.csv
readS3/: Makefile  main.cc  readS3.cc  readS3.h
sim/: .gitignore  README  testsuite.py
sim/acqserial/: Makefile  README  acqserialtest.vhd  coregen.sh  decode8b10b.xco  encode8b10b.xco  fiberdecode8b10b.xco  fiberencode8b10b.xco  sim.conf
sim/bootser/: Makefile  bootsertest.vhd  sim.conf
sim/datasport/: Makefile  README  datasporttest.vhd  sim.conf
sim/decodemux/: Makefile  decodemuxtest.vhd  sim.conf
sim/decoder/: Makefile  README  decodertest.vhd  encode8b10b.xco  sim.conf
software/: acqserial.txt  channel.h  main  overview.txt  requirements.txt  samplebuffer.h  samplebuffer.txt  samplebuffer_test.cc  software.arch.tex
solidmodel/: DSP board.SLDASM  DSPboard PCB.SLDPRT  DSPboard bracket.SLDPRT  HFBR-x528.SLDPRT  Keystone Nylon Washer 3162.SLDPRT
src/: FastDelegate.h  README  acqboarddatasrc.cc  acqboarddatasrc.h  acqboardif.cc  acqboardif.h  acqdatasource.cc  acqdatasource.h  acqdatasourcecontrol.cc  acqdatasourcecontrol.h  acqserialt.h  acqstatecontrol.cc  acqstatecontrol.h  acqstatereceiver.h  audiomon.cc  audiomon.h  benchmark.cc  benchmark.h  callback.h  dataout.cc  dataout.h  datasinkbase.h  datasourcebase.h  datasrc.h  defaultmainloop.cc  defaultmainloop.h  dsp.h  echoproc.cc  echoproc.h  event.h  eventdispatch.cc  eventdispatch.h  eventoutfifo.h  eventutil.cc  eventutil.h  fakesource.cc  fakesource.h  filterio.h  filterlinkbase.h  filterlinkcontroller.cc  (+14 more)
tests/: .gitignore  README
tgt/: .gitignore
vhdl/: DSPBoard.vhd  DSPboard.vhdl  DataMux.vhd  EventInputs.vhd  EventInputs.vhdl  EventMux.vhd  EventOutputs.vhd  EventOutputs.vhdl  FiberRX.vhd  acqcmdmux.vhd  acqserial.vhd  bootser.vhd  databuffer.vhd  databuffer.vhdl  datamux.vhd  datasport.vhd  decodemux.vhd  decoder.vhd  devicemuxtx.vhd  dspboard.do  dspboard.ucf  dspboard_testbench.vhd  dspcontproc.asmpy  dspcontproc.vhd  dspio.vhd  dspio.vhdl  dspiomux.vhd  encode8b10b.xco  encodedata.vhd  encodemux.vhd  eventfilter.vhd  eventin.vhd  eventrx.vhd  events.vhd  evtendianrev.vhd  fiberdecode8b10b.xco  fiberrx.vhd  fibertx.vhd  framedis.vhd  jtag.vhd  (+14 more)
(+446 files in other folders)
